--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
 
 	<repositories>
+		<repository>
+			<url>http://dist.wso2.org/maven2/</url>
+		</repository>
 
 	</repositories>
 
@@ -570,12 +573,82 @@
 			<artifactId>jboss-marshalling-river</artifactId>
 			<version>1.4.11.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling</artifactId>
 			<version>1.4.11.Final</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss/jboss-ejb-client -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-ejb-client</artifactId>
+			<version>2.1.6.Final-redhat-1</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.jboss/jboss-ejb-client -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-ejb-client</artifactId>
+			<version>2.1.6.Final</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss.xnio/xnio-api -->
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-api</artifactId>
+			<version>3.4.1.Final</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss.xnio/xnio-nio -->
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-nio</artifactId>
+			<version>3.4.1.Final</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.3.0.Final-redhat-1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.3.0.Final</version>
+		</dependency>
+
+
+
+		<!-- https://mvnrepository.com/artifact/org.jboss/jboss-remote-naming -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-remote-naming</artifactId>
+			<version>2.0.4.Final-redhat-1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss/jboss-remote-naming -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-remote-naming</artifactId>
+			<version>2.0.4.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.axis2/axis2 -->
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2</artifactId>
+			<version>1.6.3</version>
+		</dependency>
+
+
+
+
+
 
 	</dependencies>
 
