--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -1,5 +1,10 @@
 [main]
+#shiro.loginUrl = /login.jsp
 sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
+cookie = org.apache.shiro.web.servlet.SimpleCookie 
+cookie.name = shiro.session.id
+sessionManager.sessionIdCookie = $cookie
+
 # configure properties (like session timeout) here if desired
 sessionManager.sessionIdCookieEnabled = true
 
@@ -18,11 +23,13 @@ jdbcRealm.authenticationQuery = select u_pwd from user where u_name = ?
 jdbcRealm.userRolesQuery = select rl.name from user_role r left join user u on u.id = r.user_id left join role rl on rl.id=r.roles_id where u.u_name = ?
 
 ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-ds.serverName = db
-ds.user = root
-ds.databaseName = pixeland_content360
+ds.serverName = localhost
+ds.user = root2
+#ds.password = 
+ds.databaseName = cmp_reporting
 jdbcRealm.dataSource = $ds
 
 
 [urls]
-/Desktop.action = authc
+#/index.jsp = authc
+#/index.jsp = logout
