--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.1.GA</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
