--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,7 @@
 
 
 	<repositories>
-		<!--repository>
-			<url>http://dist.wso2.org/maven2/</url>
-		</repository-->
+		<!--repository> <url>http://dist.wso2.org/maven2/</url> </repository -->
 
 	</repositories>
 
@@ -70,7 +68,13 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.1.GA</version>
-			<scope>provided</scope>
+		</dependency>
+
+		<!-- To work in Wildfly 10 ? -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-servlet-initializer</artifactId>
+			<version>3.0.17.Final</version>
 		</dependency>
 
 		<dependency>
