--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,24 +7,38 @@
   <listener>
     <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
   </listener>
+  <listener>
+		<listener-class>
+			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+		</listener-class>
+  </listener>
+  
+  <context-param>
+		<param-name>resteasy.scan</param-name>
+		<param-value>true</param-value>
+  </context-param>
+  <context-param>
+		<param-name>resteasy.servlet.mapping.prefix</param-name>
+		<param-value>/rest</param-value>
+  </context-param>
+	
   <filter>
     <filter-name>ShiroFilter</filter-name>
     <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
   </filter>
-  <filter>
-    <filter-name>Resteasy</filter-name>
-    <filter-class>
-             org.jboss.resteasy.plugins.server.servlet.FilterDispatcher
-        </filter-class>
-    <init-param>
-      <param-name>resteasy.scan</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>Resteasy</filter-name>
-    <url-pattern>/rest/*</url-pattern>
-  </filter-mapping>
+  
+  <servlet>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<servlet-class>
+			org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+		</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+	
   <filter>
     <filter-name>DynamicMappingFilter</filter-name>
     <filter-class>net.sourceforge.stripes.controller.DynamicMappingFilter
