--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,12 @@
 			<classifier>jdk15</classifier>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jaxrs -->
-<dependency>
-    <groupId>org.jboss.resteasy</groupId>
-    <artifactId>resteasy-jaxrs</artifactId>
-    <version>3.0.19.Final</version>
-</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>2.3.1.GA</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- To work in Wildfly 10 ? -->
 		<dependency>
@@ -89,6 +89,7 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>2.2.0.GA</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
