--- a/mtsender.properties
+++ b/mtsender.properties
@@ -1,5 +1,6 @@
-ejbhost=localhost
-ejbhostport=4447
+ejbhost=127.0.0.1
+ejbhostport=8081
+ejbprotocol=http-remoting
 SECURITY_PRINCIPAL=testuser
 SECURITY_CREDENTIALS=testpassword123!
 mturl=http://41.223.58.157:56000/Bharti
@@ -36,14 +37,14 @@ pollWait=100
 
 
 #Custom connection pool parameters
-constr=jdbc:mysql://db/pixeland_content360?user=root&password=
+constr=jdbc:mysql://127.0.0.1/cmp?user=root&password=
 db_username=root
 db_password=
 db_host=db
 initialDBConnections=2
 maxDBConnections=4
 #the db name
-DATABASE=pixeland_content360
+DATABASE=cmp
 
 
 SERVER_TZ=-05:00
@@ -78,3 +79,6 @@ min_throttle_billing=600
 #, we wait a long time before we try to process
 # a subscription renewal.
 mandatory_throttle=120000
+
+
+mandatoryqueuewaittime=0
