--- a/jboss-ejb-client.properties
+++ b/jboss-ejb-client.properties
@@ -2,6 +2,12 @@ endpoint.name=client-endpoint
 remote.connectionprovider.create.options.org.xnio.Options.SSL_ENABLED=false
 remote.connections=default
  
-remote.connection.default.host=localhost
+remote.connection.default.host=127.0.0.1
 remote.connection.default.port = 4447
-remote.connection.default.connect.options.org.xnio.Options.SASL_POLICY_NOANONYMOUS=false
+#remote.connection.default.connect.options.org.xnio.Options.SASL_POLICY_NOANONYMOUS=false
+remote.connection.default.connect.options.org.xnio.Options.SASL_POLICY_NOANONYMOUS=true
+remote.connection.default.connect.options.org.xnio.Options.SASL_DISALLOWED_MECHANISMS=JBOSS-LOCAL-USER
+
+remote.connection.default.username=ejbuser
+remote.connection.default.password=ejbuser123
+
