--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -23,8 +23,8 @@ jdbcRealm.authenticationQuery = select u_pwd from user where u_name = ?
 jdbcRealm.userRolesQuery = select rl.name from user_role r left join user u on u.id = r.user_id left join role rl on rl.id=r.roles_id where u.u_name = ?
 
 ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-ds.serverName = localhost
-ds.user = root2
+ds.serverName = 127.0.0.1
+ds.user = root
 #ds.password = 
 ds.databaseName = cmp_reporting
 jdbcRealm.dataSource = $ds
